# simple-fs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
daemon/: CMakeLists.txt
daemon/src/: ServerListener.cpp  main.cpp
daemon/src/communication/: ServerListener.cpp  ServerListener.h  ServerSessionConnector.cpp  ServerSessionConnector.h
daemon/src/diskfunctions/: DiskOperations.cpp  DiskOperations.h
daemon/src/logging/: Log.cpp  log.h
daemon/src/management/: Directory.cpp  Directory.h  DiskDescriptor.h  DiskException.h  FileDescriptor.cpp  FileDescriptor.h  Inode.h  InodeDirectoryEntry.cpp  InodeEntry.h  InodeList.cpp  InodeList.h  UsageMap.cpp  UsageMap.h
lib/: CMakeLists.txt
lib/src/: ClientConnector.cpp  ClientConnector.h  simplefs.cpp  simplefs.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  ClientConnector.cpp  ClientConnector.h
src/utils/: CMakeLists.txt  OperationWithPathRequest.cpp  Packet.cpp  config.h
tests/: CMakeLists.txt
tests/src/: run_tests.sh
tests/src/auto/: chmod_file-in-usage.cpp  chmod_take-away-read.cpp  chmod_take-away-write.cpp  create_no-read-access-on-path.cpp  create_no-write-access-on-directory.cpp  create_not-in-dir.cpp  create_path-not-found.cpp  create_slash-or-dots.cpp  create_succesfully-create-file.cpp  mkdir_no-read-access-on-path.cpp  mkdir_no-write-access-on-directory.cpp  mkdir_not-in-dir.cpp  mkdir_path-not-found.cpp  mkdir_slash-or-dots.cpp  mkdir_succesfully-create-dir.cpp  read_write_bad-open-access.cpp  read_write_succesfully-change-file.cpp  unlink_fail-on-used-file.cpp  unlink_no-write-access.cpp  unlink_path-not-found.cpp  unlink_slash-or-dots.cpp  unlink_succesfully-delete-file.cpp
tests/src/manual/: chmod.cpp  create.cpp  ls.cpp  mkdir.cpp  read.cpp  unlink.cpp  write.cpp
tests/src/mp/: mp.cpp
tests/src/utils/: ls.h
utils/: CMakeLists.txt
utils/src/: CloseRequest.cpp  Connector.cpp  Connector.h  ErrorResponse.cpp  FDResponse.cpp  IPCPackets.h  LSeekRequest.cpp  OKResponse.cpp  OperationWithPathRequest.cpp  Packet.cpp  ReadRequest.cpp  ShmemPtrResponse.cpp  WriteRequest.cpp  config.cpp  config.h
